docker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-ui
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: docker-registry-ui
  type: ClusterIP
